--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
   "bugs": {
     "url": "https://github.com/crewmeister/eslint-config-crewmeister/issues"
   },
-  "homepage": "https://github.com/crewmeister/eslint-config-crewmeister#readme"
+  "homepage": "https://github.com/crewmeister/eslint-config-crewmeister#readme",
+  "dependencies": {
+    "babel-eslint": "^4.1.8",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.1",
+    "eslint-plugin-react": "^3.16.1"
+  }
 }
