--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint-crewmeister": "./bin/eslint-crewmeister.js"
   },
   "scripts": {
-    "lint": "node ./bin/eslint-crewmeister.js index.js",
+    "lint": "node ./bin/eslint-crewmeister.js index.js example.js",
     "test": "npm run lint"
   },
   "repository": {
