--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "babel-eslint": "^4.1.8",
     "eslint": "^1.10.3",
+    "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-react": "^3.16.1"
   }
 }
