--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/crewmeister/eslint-config-crewmeister#readme",
   "dependencies": {},
-  "devDependencies": {
+  "peerDependencies": {
     "babel-eslint": "^6.1.2",
     "eslint": "^3.4.0",
     "eslint-plugin-flowtype": "^2.15.0",
