--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "url": "https://github.com/crewmeister/eslint-config-crewmeister/issues"
   },
   "homepage": "https://github.com/crewmeister/eslint-config-crewmeister#readme",
-  "dependencies": {},
-  "peerDependencies": {
+  "dependencies": {
     "babel-eslint": "^6.1.2",
     "eslint": "^3.4.0",
     "eslint-plugin-flowtype": "^2.15.0",
