--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^3.4.0",
     "eslint-plugin-flowtype": "^2.15.0",
     "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-no-only-tests": "^1.1.0",
     "eslint-plugin-react": "^6.2.0"
   }
 }
