--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-no-only-tests": "^2.0.0",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-jsx-control-statements": "^2.2.0"
   }
 }
