--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-crewmeister",
-  "version": "3.6.1",
+  "version": "3.6.2",
   "description": "The eslint config we use at crewmeister.",
   "main": "index.js",
   "bin": {
@@ -29,7 +29,7 @@
     "url": "https://github.com/crewmeister/eslint-config-crewmeister/issues"
   },
   "homepage": "https://github.com/crewmeister/eslint-config-crewmeister#readme",
-  "dependencies": {
+  "peerDependencies": {
     "babel-eslint": "^8.0.1",
     "eslint": "^4.9.0",
     "eslint-plugin-flowtype": "^2.39.1",
